Move redis conf

--- a/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/redis-secret.yaml.j2
+++ b/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/redis-secret.yaml.j2
@@ -8,5 +8,5 @@ metadata:
     {{ nextcloud_redis.labels_desc | to_nice_yaml() | indent(4) }}
 type: Opaque
 data:
-  redis.conf: {{ lookup('template', role_path + '/app/config/redis.conf.j2') | b64encode }}
+  redis.conf: {{ lookup('template', role_path + '/app/config/redis/redis.conf.j2') | b64encode }}
   password: {{ paperless_redis.password | b64encode }}
