--- a/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/nextcloud-secret.yaml.j2
+++ b/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/nextcloud-secret.yaml.j2
@@ -10,3 +10,6 @@ type: Opaque
 data:
   admin_user: {{ nextcloud.admin.user | b64encode }}
   admin_password: {{ nextcloud.admin.password | b64encode }}
+  smtp_user: {{ nextcloud.smtp.user | b64encode }}
+  smtp_password: {{ nextcloud.smtp.password | b64encode }}
+  smtp_custom.config.php: {{ lookup('template', role_path + '/app/config/smtp_custom.config.php.j2') | b64encode }}
