Add ldap support

--- a/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/nextcloud-secret.yaml.j2
+++ b/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/nextcloud-secret.yaml.j2
@@ -13,3 +13,4 @@ data:
   smtp_user: {{ nextcloud.smtp.user | b64encode }}
   smtp_password: {{ nextcloud.smtp.password | b64encode }}
   smtp_custom.config.php: {{ lookup('template', role_path + '/app/config/smtp_custom.config.php.j2') | b64encode }}
+  ldap.conf: {{ lookup('template', role_path + '/app/config/ldap.conf.j2') | b64encode }}
