--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -784,6 +784,11 @@ watchers:
     excludes:
       - .*alpine3\.1[0-5]
       - ^[0-6]\.
+  - name: Caldav recurring task scheduler
+    type: github_commit
+    repo: Neraud/caldav-recurring-task-scheduler
+    branch: main
+    commit: {{ nextcloud_task_rescheduler.repo.version }}
   - name: Paperless-ngx
     type: docker_registry
     repo: {{ _paperless_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
