--- a/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/networkPolicies.yaml.j2
@@ -66,13 +66,17 @@ spec:
       {{ nextcloud.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
-    # Allow from the ingress controller
     - ports:
         - port: web
       from:
+        # Allow from the ingress controller
         - namespaceSelector:
             matchLabels:
               {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
           podSelector:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+        # Allow from task-rescheduler 
+        - podSelector:
+            matchLabels:
+              {{ nextcloud_task_rescheduler.labels_def | to_nice_yaml() | indent(14) }}
