--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -676,10 +676,10 @@ watchers:
     image: {{ homer.base_image.name }}
     tag: {{ homer.base_image.tag }}
     includes:
-      - 'v?[0-9]+.[0-9]+.[0-9]+-amd64'
+      - 'v[0-9]+.[0-9]+.[0-9]+-amd64'
     excludes:
-      - 'v?21\..*'
-      - 'v?22\.[0-6]\..*'
+      - 'v21\..*'
+      - 'v22\.[0-6]\..*'
   - name: Homer icons
     type: github_commit
     repo: {{ homer.icons_repo.repo }}
