--- a/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/paperless-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/paperless-statefulSet.yaml.j2
@@ -114,6 +114,12 @@ spec:
           value: "{{ paperless.settings.convert_tmpdir }}"
         - name: PAPERLESS_FILENAME_FORMAT
           value: "{{ paperless.settings.filename_format }}"
+        - name: PAPERLESS_DATA_DIR
+          value: "/usr/src/paperless/data"
+        # The entrypoint should set DATA_DIR to PAPERLESS_DATA_DIR, but it doesn't seem to work
+        # We set it here to avoid issues like "/sbin/docker-prepare.sh: line 47: /migration_lock: Read-only file system"
+        - name: DATA_DIR
+          value: "/usr/src/paperless/data"
         ports:
         - containerPort: 8000
           name: web
