--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -818,8 +818,9 @@ watchers:
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
+      - .*(beta|rc).*
       - ^0\..*
-      - ^1\.[0-6]\..*
+      - ^1\.[0-7]\..*
   - name: "Paperless Redis"
     type: docker_registry
     repo: {{ paperless_redis.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
