--- a/ansible/install_applications/roles/tool_miniflux_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/tool_miniflux_deploy/app/deploy/networkPolicies.yaml.j2
@@ -50,3 +50,32 @@ spec:
           podSelector:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+
+---
+
+kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: allow-to-reminiflux
+  namespace: {{ miniflux.namespace }}
+  labels:
+    {{ miniflux_reminiflux.labels_def | to_nice_yaml() | indent(4) }}
+    {{ miniflux_reminiflux.labels_desc | to_nice_yaml() | indent(4) }}
+spec:
+  types: [Ingress]
+
+  podSelector:
+    matchLabels:
+      {{ miniflux_reminiflux.labels_def | to_nice_yaml() | indent(6) }}
+
+  ingress:
+    # Allow from the ingress controller
+    - ports:
+        - port: http
+      from:
+        - namespaceSelector:
+            matchLabels:
+              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+          podSelector:
+            matchLabels:
+              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
