--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -746,6 +746,51 @@ watchers:
   ################
   # Apps : Tools #
   ################
+  - name: Miniflux
+    type: docker_registry
+    repo: {{ miniflux.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ miniflux.base_image.name }}
+    tag: {{ miniflux.base_image.tag }}
+    includes:
+      - ^[0-9]+.[0-9]+.[0-9]+$
+    excludes:
+      - ^1\..*
+      - ^2.0.[0-9]$
+      - ^2.0.[0-2][0-9]$
+      - ^2.0.3[0-7]$
+  - name: Miniflux PostgreSQL
+    type: docker_registry
+    repo: {{ miniflux_pgsql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ miniflux_pgsql.base_image.name }}
+    tag: {{ miniflux_pgsql.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+    excludes:
+      - .*-alpine3\.1[0-5]
+      - ^[0-9]\..*
+      - ^1[0-3]\..*
+  - name: "Reminiflux Node"
+    type: docker_registry
+    repo: {{ miniflux_reminiflux.base_builder_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ miniflux_reminiflux.base_builder_image.name }}
+    tag: {{ miniflux_reminiflux.base_builder_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
+    excludes:
+      - .*-alpine3.1[0-5]
+      - 1[0-7]\..*
+      - 18\.[0-7]\..*
+  - name: "Reminiflux Nginx"
+    type: docker_registry
+    repo: {{ miniflux_reminiflux.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ miniflux_reminiflux.base_image.name }}
+    tag: {{ miniflux_reminiflux.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+-alpine$
+    excludes:
+      - 1\.[0-9]\..*
+      - 1\.[0-1][0-9]\..*
+      - 1\.2[0-2]\..*
   - name: Nextcloud
     type: docker_registry
     repo: {{ nextcloud.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
