--- a/ansible/install_infra/roles/kubernetes_nginx_ingress_deploy/templates/mandatory.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_nginx_ingress_deploy/templates/mandatory.yaml.j2
@@ -15,7 +15,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
   namespace: ingress-nginx
 ---
@@ -27,7 +27,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
   namespace: ingress-nginx
 ---
@@ -39,7 +39,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
   namespace: ingress-nginx
 rules:
@@ -127,6 +127,14 @@ rules:
   verbs:
   - create
   - patch
+- apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - list
+  - watch
+  - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -136,7 +144,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
   namespace: ingress-nginx
 rules:
@@ -155,7 +163,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
 rules:
 - apiGroups:
@@ -220,6 +228,14 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - list
+  - watch
+  - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -229,7 +245,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
 rules:
 - apiGroups:
@@ -248,7 +264,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
   namespace: ingress-nginx
 roleRef:
@@ -268,7 +284,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
   namespace: ingress-nginx
 roleRef:
@@ -287,7 +303,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -306,7 +322,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -327,7 +343,7 @@ subjects:
 #    app.kubernetes.io/instance: ingress-nginx
 #    app.kubernetes.io/name: ingress-nginx
 #    app.kubernetes.io/part-of: ingress-nginx
-#    app.kubernetes.io/version: 1.3.0
+#    app.kubernetes.io/version: 1.4.0
 #  name: ingress-nginx-controller
 #  namespace: ingress-nginx
 ---
@@ -339,7 +355,7 @@ subjects:
 #    app.kubernetes.io/instance: ingress-nginx
 #    app.kubernetes.io/name: ingress-nginx
 #    app.kubernetes.io/part-of: ingress-nginx
-#    app.kubernetes.io/version: 1.3.0
+#    app.kubernetes.io/version: 1.4.0
 #  name: ingress-nginx-controller
 #  namespace: ingress-nginx
 #spec:
@@ -371,7 +387,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-controller-admission
   namespace: ingress-nginx
 spec:
@@ -394,7 +410,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-controller
   namespace: ingress-nginx
 spec:
@@ -436,7 +452,7 @@ spec:
               fieldPath: metadata.namespace
         - name: LD_PRELOAD
           value: /usr/local/lib/libmimalloc.so
-        image: registry.k8s.io/ingress-nginx/controller:v1.3.0@sha256:d1707ca76d3b044ab8a28277a2466a02100ee9f58a86af1535a3edf9323ea1b5
+        image: registry.k8s.io/ingress-nginx/controller:v1.4.0@sha256:34ee929b111ffc7aa426ffd409af44da48e5a0eea1eb2207994d9e0c0882d143
         imagePullPolicy: IfNotPresent
         lifecycle:
           preStop:
@@ -508,7 +524,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission-create
   namespace: ingress-nginx
 spec:
@@ -519,7 +535,7 @@ spec:
         app.kubernetes.io/instance: ingress-nginx
         app.kubernetes.io/name: ingress-nginx
         app.kubernetes.io/part-of: ingress-nginx
-        app.kubernetes.io/version: 1.3.0
+        app.kubernetes.io/version: 1.4.0
       name: ingress-nginx-admission-create
     spec:
       containers:
@@ -533,7 +549,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.1.1@sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660
+        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v20220916-gd32f8c343@sha256:39c5b2e3310dc4264d638ad28d9d1d96c4cbb2b2dcfb52368fe4e3c63f61e10f
         imagePullPolicy: IfNotPresent
         name: create
         securityContext:
@@ -555,7 +571,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission-patch
   namespace: ingress-nginx
 spec:
@@ -566,7 +582,7 @@ spec:
         app.kubernetes.io/instance: ingress-nginx
         app.kubernetes.io/name: ingress-nginx
         app.kubernetes.io/part-of: ingress-nginx
-        app.kubernetes.io/version: 1.3.0
+        app.kubernetes.io/version: 1.4.0
       name: ingress-nginx-admission-patch
     spec:
       containers:
@@ -582,7 +598,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.1.1@sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660
+        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v20220916-gd32f8c343@sha256:39c5b2e3310dc4264d638ad28d9d1d96c4cbb2b2dcfb52368fe4e3c63f61e10f
         imagePullPolicy: IfNotPresent
         name: patch
         securityContext:
@@ -604,7 +620,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: nginx
 spec:
   controller: k8s.io/ingress-nginx
@@ -617,7 +633,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.3.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-admission
 webhooks:
 - admissionReviewVersions:
