--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -811,7 +811,7 @@ watchers:
     excludes:
       - .*(beta|rc).*
       - ^0\..*
-      - ^1\.[0-7]\..*
+      - ^1\.[0-8]\..*
   - name: "Paperless Redis"
     type: docker_registry
     repo: {{ paperless_redis.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
@@ -822,6 +822,17 @@ watchers:
     excludes:
       - .*alpine3\.1[0-5]
       - ^[0-6]\.
+  - name: Paperless PostgreSQL
+    type: docker_registry
+    repo: {{ paperless_pgsql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ paperless_pgsql.base_image.name }}
+    tag: {{ paperless_pgsql.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+    excludes:
+      - .*-alpine3\.1[0-5]
+      - ^[0-9]\..*
+      - ^1[0-4]\..*
   - name: OliveTin
     type: docker_registry
     repo: {{ _olivetin_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
