Rename zwavejs2mqtt to zwavejsui Bump home-zwavejsui to 8.2.1

--- a/ansible/install_applications/roles/home_zwavejsui_deploy/app/deploy/secret.yaml.j2
+++ b/ansible/install_applications/roles/home_zwavejsui_deploy/app/deploy/secret.yaml.j2
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: zwavejs2mqtt-secret
-  namespace: "{{ zwavejs2mqtt.namespace }}"
+  name: zwavejsui-secret
+  namespace: "{{ zwavejsui.namespace }}"
   labels:
-    {{ zwavejs2mqtt.labels_def | to_nice_yaml() | indent(4) }}
-    {{ zwavejs2mqtt.labels_desc | to_nice_yaml() | indent(4) }}
+    {{ zwavejsui.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zwavejsui.labels_desc | to_nice_yaml() | indent(4) }}
 type: Opaque
 data:
-  session-secret: {{ zwavejs2mqtt.session_secret | b64encode }}
+  session-secret: {{ zwavejsui.session_secret | b64encode }}
   settings.json: {{ lookup('template', role_path + '/app/config/settings.json.j2', convert_data=False) | b64encode }}
   users.json: {{ lookup('template', role_path + '/app/config/users.json.j2', convert_data=False) | b64encode }}
