--- a/ansible/install_applications/roles/home_zwavejsui_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/home_zwavejsui_deploy/app/deploy/networkPolicies.yaml.j2
@@ -1,17 +1,17 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: allow-to-zwavejs2mqtt
-  namespace: {{ zwavejs2mqtt.namespace }}
+  name: allow-to-zwavejsui
+  namespace: {{ zwavejsui.namespace }}
   labels:
-    {{ zwavejs2mqtt.labels_def | to_nice_yaml() | indent(4) }}
-    {{ zwavejs2mqtt.labels_desc | to_nice_yaml() | indent(4) }}
+    {{ zwavejsui.labels_def | to_nice_yaml() | indent(4) }}
+    {{ zwavejsui.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ zwavejs2mqtt.labels_def | to_nice_yaml() | indent(6) }}
+      {{ zwavejsui.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow http from the ingress controller
