--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -276,15 +276,16 @@ watchers:
       - ^202[0-1].*
       - ^2022\.[0-8].*
   - type: docker_registry
-    repo: {{ zwavejs2mqtt.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ zwavejs2mqtt.base_image.name }}
-    tag: {{ zwavejs2mqtt.base_image.tag }}
+    repo: {{ zwavejsui.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ zwavejsui.base_image.name }}
+    tag: {{ zwavejsui.base_image.tag }}
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*$
     excludes:
-      - ^[1-5]\..*
-      - ^6\.[0-9]\..*
-      - ^6\.1[0-4]\..*
+      - ^[1-7]\..*
+      - ^8\.[0-9]\..*
+      - ^8\.1[0-9]\..*
+      - ^8\.2[0]\..*
   - type: docker_registry
     repo: {{ zigbee2mqtt.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
     image: {{ zigbee2mqtt.base_image.name }}
