--- a/ansible/install_applications/roles/monitoring_kube_state_metrics_deploy/app/deploy/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_kube_state_metrics_deploy/app/deploy/clusterRole.yaml.j2
@@ -110,7 +110,9 @@ rules:
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
+  - clusterrolebindings
   - clusterroles
+  - rolebindings
   - roles
   verbs:
   - list
