--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/kube-state-metrics.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/kube-state-metrics.yaml.j2
@@ -12,6 +12,10 @@ spec:
     honorLabels: true
     interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     metricRelabelings:
+    - action: drop
+      regex: kube_endpoint_address_not_ready|kube_endpoint_address_available
+      sourceLabels:
+      - __name__
     # Drop unused metrics
     - action: drop
       regex: kube_pod_(init_)?container_status_(.*)_reason
